src/test/ui/resolve/resolve-assoc-suggestions.stderr
error[E0412]: cannot find type `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:26:16
   |
26 |         let _: field;
   |                ^^^^^ not found in this scope

error[E0531]: cannot find tuple struct/variant `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:28:13
   |
28 |         let field(..);
   |             ^^^^^ not found in this scope

error[E0425]: cannot find value `field` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:30:9
   |
30 |         field;
   |         ^^^^^ help: try: `self.field`

error[E0412]: cannot find type `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:33:16
   |
33 |         let _: Type;
   |                ^^^^ help: try: `Self::Type`

error[E0531]: cannot find tuple struct/variant `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:35:13
   |
35 |         let Type(..);
   |             ^^^^ not found in this scope

error[E0425]: cannot find value `Type` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:37:9
   |
37 |         Type;
   |         ^^^^ not found in this scope

error[E0412]: cannot find type `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:40:16
   |
40 |         let _: method;
   |                ^^^^^^ not found in this scope

error[E0531]: cannot find tuple struct/variant `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:42:13
   |
42 |         let method(..);
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `method` in this scope
  --> $DIR/resolve-assoc-suggestions.rs:44:9
   |
44 |         method;
   |         ^^^^^^ help: try: `self.method`

error: aborting due to 9 previous errors

